# entity-component-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  imgui.ini
data/: entities.yaml  notes.txt
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  ecs
debug/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
debug/libs/glfw/docs/: Makefile  cmake_install.cmake
debug/libs/glfw/src/: Makefile  cmake_install.cmake
docs/: notes.txt
examples/: notes.txt
include/: common.hpp  logger.hpp  notes.txt  pch.hpp  project_info.hpp  system_info.hpp
libs/: notes.txt
libs/glad/: CMakeLists.txt
release/: CMakeCache.txt  Makefile  cmake_install.cmake  ecs
release/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
release/libs/glfw/docs/: Makefile  cmake_install.cmake
release/libs/glfw/src/: Makefile  cmake_install.cmake
res/: notes.txt
src/: archetypeManager.hpp  componentManager.cpp  componentManager.hpp  componentTypes.hpp  components.hpp  engine.hpp  entityManager.cpp  entityManager.hpp  imGuiLayer.hpp  logger.hpp  main.cpp  notes.txt  system.hpp  systemManager.cpp  systemManager.hpp  systems.hpp  timeSystem.hpp  timer.hpp  window.hpp  windowSystem.hpp  world.hpp
tests/: CMakeLists.txt  notes.txt  test_archetypeManager.cpp  test_component_manager.cpp  test_entityManager.cpp  test_systems.cpp  test_world.cpp
tools/: notes.txt
